# gameoflife-rs

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
tests/: web.rs
www/: index.js  package-lock.json  package.json  webpack.config.js
